<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".AdminActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="Latitude: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="Longitude: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLng"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:gravity="center_vertical"
                android:text="User name: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:gravity="center_vertical|center_horizontal"
                android:text="Speed\n(in meters/second over ground): "
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:gravity="center_vertical|center_horizontal"
                android:text="Direction\n(degrees clockwise from north): "
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDirection"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:gravity="center_vertical"
                android:text="Event number: "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEvent"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bBuoy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_1" />

        <Button
            android:id="@+id/bBuoy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_2" />

        <Button
            android:id="@+id/bBuoy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_3" />

        <Button
            android:id="@+id/bBuoy4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_4" />

        <Button
            android:id="@+id/bBuoy5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bBuoy6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_6" />

        <Button
            android:id="@+id/bBuoy7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_7" />

        <Button
            android:id="@+id/bBuoy8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_8" />

        <Button
            android:id="@+id/bBuoy9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_9" />

        <Button
            android:id="@+id/bBuoy10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:enabled="false"
            android:text="@string/buoy_number_10" />
    </LinearLayout>

</LinearLayout>